@@ -19,8 +19,9 @@ libportsysdir = $(libportdir)/sys
 libport_sources = 				\
 	$(libport_srcdir)/contract.cc		\
 	$(libport_srcdir)/deref.cc		\
-	$(libport_srcdir)/indent.cc		\
 	$(libport_srcdir)/escape.cc		\
+	$(libport_srcdir)/indent.cc		\
+	$(libport_srcdir)/package-info.cc	\
 	$(libport_srcdir)/symbol.cc
 
 # These are broken and someone will have to fix them...
